new github domain for analytics

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ file inputs, the file contents are read in using the FileReader API and used as 
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-37452180-6', 'github.com');
+  ga('create', 'UA-37452180-6', 'github.io');
   ga('send', 'pageview');
 </script>
 </html>
