--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script src="http://raw.github.com/jeresig/jquery.hotkeys/master/jquery.hotkeys.js"></script>
+		<script src="https://mindmup.s3.amazonaws.com/lib/jquery.hotkeys.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
 		<link href="bootstrap-wysiwyg.css" rel="stylesheet">
@@ -108,7 +108,7 @@
 
         <h2>Why?</h2>
 
-        <a href="http://www.mindmup.com"><img class="span5" src="https://raw.github.com/mindmup/mindmup.github.com/master/promo-868x350.png"></a>
+        <a href="http://www.mindmup.com"><img class="span5" src="promo-868x350.png"></a>
         <br clear="all" />
         <p>
           While building a content editor for <a href="http://www.mindmup.com">MindMup</a> we found plenty of good HTML5 WYSWYG editors online, but most were duplicating
