--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container">
   <div class="hero-unit">
-    <h1>bootstrap-wysiwyg <small>tiny wysiwyg rich text editor for boostrap</small></h1>
+    <h1>bootstrap-wysiwyg <small>tiny wysiwyg rich text editor for Bootstrap</small></h1>
     <hr/>
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
       <div class="btn-group">
