--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
 <div class="container">
   <div class="hero-unit">
+  <div class="pull-right">
+    <div class="fb-like" data-href="http://facebook.com/mindmupapp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+    <a href="https://twitter.com/mindmup" class="twitter-follow-button" data-show-count="true" data-show-screen-name="true" data-lang="en">Follow @mindmup</a> 
+  </div>
     <h1>bootstrap-wysiwyg <small>tiny wysiwyg rich text editor for Bootstrap</small></h1>
     <hr/>
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
@@ -131,6 +135,10 @@
 <pre class="prettyprint linenums">
  #editor {overflow:scroll; max-height:300px}
 </pre>
+<p>If you want to use this for a mobile web site, make sure to read about
+<a href="https://github.com/mindmup/bootstrap-wysiwyg#styling-for-mobile-devices">how to style it</a> to optimise mobile screen usage and experience (please note that this 
+demo page isn't optimised for mobile access).</p>
+
       <p>Optionally, also create a toolbar (see the source of this page for an example):</p>
 <pre class="prettyprint linenums">
 &lt;div class="btn-toolbar" data-role="editor-toolbar"
@@ -156,7 +164,7 @@ file inputs, the file contents are read in using the FileReader API and used as 
  $('#editor').cleanHtml()
 </pre>
 
-			 <p style="text-align:center; margin-top:60px">
+			 <p style="text-align:center;">
 				<a class="btn btn-large btn-primary jumbo" href="https://github.com/mindmup/bootstrap-wysiwyg/">View project on Github</a>
       </p>
 			 <p style="text-align:center; margin-top:20px">
@@ -202,13 +210,24 @@ file inputs, the file contents are read in using the FileReader API and used as 
   });
 </script>
 <a href="https://github.com/mindmup/bootstrap-wysiwyg/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+<div id="fb-root"></div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-37452180-6', 'github.io');
   ga('send', 'pageview');
 </script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "http://connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+ </script>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 </html>
