facebook/twitter buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="container">
   <div class="hero-unit">
   <div class="pull-right">
-    <div class="fb-like" data-href="http://facebook.com/mindmupapp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+	<div class="fb-like" data-href="http://facebook.com/mindmupapp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div><br/>
     <a href="https://twitter.com/mindmup" class="twitter-follow-button" data-show-count="true" data-show-screen-name="true" data-lang="en">Follow @mindmup</a> 
   </div>
     <h1>bootstrap-wysiwyg <small>tiny wysiwyg rich text editor for Bootstrap</small></h1>
