--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="https://mindmup.s3.amazonaws.com/lib/jquery.hotkeys.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
-		<link href="bootstrap-wysiwyg.css" rel="stylesheet">
+		<link href="index.css" rel="stylesheet">
     <script src="bootstrap-wysiwyg.js"></script>
   </head>
   <body>
@@ -100,7 +100,7 @@
             <li>Automatically binds standard hotkeys for common operations on Mac and Windows</li>
             <li>Drag and drop files to insert images, support image upload (also taking photos on mobile devices)</li>
             <li>Voice dictation input (only in Chrome)</li>
-            <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, FortAwesome and so on...</li>
+            <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, Font Awesome and so on...</li>
             <li>Does not force any styling - it's all up to you</li>
             <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="https://developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
             <li>Does not create a separate frame, backup text areas etc - instead keeps it simple and runs everything inline in a DIV</li>
