added IE 10 message

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="https://developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
             <li>Does not create a separate frame, backup text areas etc - instead keeps it simple and runs everything inline in a DIV</li>
             <li>(Optionally) cleans up trailing whitespace and empty divs and spans</li> 
-            <li>Requires a modern browser (tested in Chrome 26, Firefox 19, Safari 6)</li>
+            <li>Requires a modern browser (tested in Chrome 26, Firefox 19, Safari 6, reported by users to work in IE10)</li>
             <li>Supports mobile devices (tested on IOS 6 Ipad/Iphone and Android 4.1.1 Chrome)</li>
           </ul>
 
