Removed unused folders. Fix editor initialization.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script src="./js/wysiwyg.js"></script>
 <script>
     $(function () {
-        $('#editor').wysiwyg({ imageUploadUrl: '/upload/image/editor/', redirectIframeUrl: '/upload/redirect/?%s'});
+        $('#editor').wysiwyg();
     });
 </script>
 </body>
