adding buttons with command formatblock

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
           </ul>
       </div>
       <div class="btn-group">
+		<a class="btn btn-large" data-edit="comm-pre">pre</a>
+		<a class="btn btn-large" data-edit="comm-small">small tag</a>
+		<a class="btn btn-large" data-edit="comm-code">code tag</a>
+		<a class="btn btn-large" data-edit="comm-abbr">abbr tag</a>
+		<a class="btn btn-large" data-edit="comm-address">address tag</a>
+	</div>
+      <div class="btn-group">
         <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i></a>
         <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i></a>
         <a class="btn" data-edit="strikethrough" title="Strikethrough"><i class="icon-strikethrough"></i></a>
