Adding support for <div placeholder=""> as per original issue #143
Tested in Safari, FF and Chrome. Not tested on mobile.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					id="voiceBtn" x-webkit-speech="" />
 			</div>
 
-			<div id="editor" class="lead">Go ahead&hellip;</div>
+			<div id="editor" class="lead" placeholder="Go ahead&hellip;"></div>
 		</div>
 
 		<div class="row">
