* Added support for placeholder attribute as requested in issue #143 and #136 * Created examples 	- Basic (no toolbar) 	- Simple Toolbar 	- Clear formatting button as per request #138 * Moved layout to css/ src/ js/ * Added :focus support as per request #141 * Validated bower.json as per request #134 (Valid JSON)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 		content="opensource rich wysiwyg text editor jquery bootstrap execCommand html5" />
 	<meta name="description"
 		content="This tiny jQuery Bootstrap WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
-	<link rel="apple-touch-icon"
-		href="//mindmup.s3.amazonaws.com/lib/img/apple-touch-icon.png" />
-	<link rel="shortcut icon"
-		href="http://mindmup.s3.amazonaws.com/lib/img/favicon.ico" />
 	<link href="external/google-code-prettify/prettify.css" rel="stylesheet" />
 	<link rel="stylesheet"
 		href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
@@ -25,8 +21,8 @@
 	<script
 		src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script src="external/google-code-prettify/prettify.js"></script>
-	<link href="index.css" rel="stylesheet" />
-	<script src="bootstrap-wysiwyg.js"></script>
+	<link href="css/style.css" rel="stylesheet" />
+	<script src="src/bootstrap-wysiwyg.js"></script>
 </head>
 <body>
 
