--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -115,7 +115,7 @@
 			<div id="editorPreview"></div>
 			<p style="text-align: center;">
 					<a class="btn btn-large btn-default jumbo"
-						href="#!" onClick="$('#editorPreview').html($('#editor').html());">Submit</a>
+						href="#!" onClick="$('#editorPreview').html($('#editor').cleanHtml());">Submit</a>
 				</p>
 		</div>
 		<script type='text/javascript'>$('#editor').wysiwyg();</script>
