--- a/index.html
+++ b/index.html
@@ -31,19 +31,22 @@
 			<div id="alerts"></div>
 			<div data-role="editor-toolbar"
 				data-target="#editor">
+
+				<!-- Font Face -->
 				<div>
 					<a data-toggle="dropdown"
-						title="Font"><i class="icon-font"></i><b class="caret"></b>
+						title="Font">Font
 					</a>
 					<ul class="dropdown-menu">
 					</ul>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-						title="Font Size"><i class="icon-text-height"></i>&nbsp;<b
-						class="caret"></b>
+
+				<!-- Font Size -->
+				<div>
+					<a data-toggle="dropdown"
+						title="Font Size">Font Size
 					</a>
-					<ul class="dropdown-menu">
+					<ul>
 						<li><a data-edit="fontSize 5"><font size="5">Huge</font>
 						</a>
 						</li>
@@ -55,73 +58,84 @@
 						</li>
 					</ul>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="bold"
-						title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i>
-					</a> <a class="btn btn-default" data-edit="italic"
-						title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i>
-					</a> <a class="btn btn-default" data-edit="strikethrough"
-						title="Strikethrough"><i class="icon-strikethrough"></i>
-					</a> <a class="btn btn-default" data-edit="underline"
-						title="Underline (Ctrl/Cmd+U)"><i class="icon-underline"></i>
+
+				<!-- Basic Formatting -->
+				<div>
+					<a data-edit="bold"
+						title="Bold (Ctrl/Cmd+B)">Bold
+					</a> <a data-edit="italic"
+						title="Italic (Ctrl/Cmd+I)">Italic
+					</a> <a data-edit="strikethrough"
+						title="Strikethrough">Strikethrough
+					</a> <a data-edit="underline"
+						title="Underline (Ctrl/Cmd+U)">Underline
 					</a>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="insertunorderedlist"
-						title="Bullet list"><i class="icon-list-ul"></i>
-					</a> <a class="btn btn-default" data-edit="insertorderedlist"
-						title="Number list"><i class="icon-list-ol"></i>
-					</a> <a class="btn btn-default" data-edit="outdent"
-						title="Reduce indent (Shift+Tab)"><i class="icon-indent-left"></i>
-					</a> <a class="btn btn-default" data-edit="indent" title="Indent (Tab)"><i
-						class="icon-indent-right"></i>
+
+				<!-- Lists -->
+				<div>
+					<a data-edit="insertunorderedlist"
+						title="Bullet list">Bullet List
+					</a> <a data-edit="insertorderedlist"
+						title="Number list">Number list
+					</a> <a data-edit="outdent"
+						title="Reduce indent (Shift+Tab)">Reduce indent
+					</a> <a data-edit="indent" title="Indent (Tab)">Indent
 					</a>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="justifyleft"
-						title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i>
-					</a> <a class="btn btn-default" data-edit="justifycenter"
-						title="Center (Ctrl/Cmd+E)"><i class="icon-align-center"></i>
-					</a> <a class="btn btn-default" data-edit="justifyright"
-						title="Align Right (Ctrl/Cmd+R)"><i class="icon-align-right"></i>
-					</a> <a class="btn btn-default" data-edit="justifyfull"
-						title="Justify (Ctrl/Cmd+J)"><i class="icon-align-justify"></i>
+
+				<!-- Alignment -->
+				<div>
+					<a data-edit="justifyleft"
+						title="Align Left (Ctrl/Cmd+L)">Align Left
+					</a> <a data-edit="justifycenter"
+						title="Center (Ctrl/Cmd+E)">Align Center
+					</a> <a data-edit="justifyright"
+						title="Align Right (Ctrl/Cmd+R)">Align Right
+					</a> <a data-edit="justifyfull"
+						title="Justify (Ctrl/Cmd+J)">Justify
 					</a>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-						title="Hyperlink"><i class="icon-link"></i>
-					</a>
-					<div class="dropdown-menu input-append">
-						<input class="span2" placeholder="URL" type="text"
+
+				<!-- Hyperlink -->
+				<div>
+					<a title="Hyperlink">Link</a>
+					<div>
+						<input placeholder="URL" type="text"
 							data-edit="createLink" />
-						<button class="btn" type="button">Add</button>
+						<button type="button">Add Link</button>
 					</div>
 				</div>
 
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="unlink"
-						title="Remove Hyperlink"><i class="icon-cut"></i>
-					</a> <a class="btn btn-default"
-						title="Insert picture (or just drag & drop)" id="pictureBtn">
-						<i class="icon-picture"></i> <input type="file"
+				<!-- Images -->
+				<div>
+					<a data-edit="unlink"
+						title="Remove Hyperlink">Remove Hyperlink
+					</a> <a	title="Insert picture (or just drag & drop)" id="pictureBtn">
+					    Insert picture (or just drag & drop) <input type="file"
 						data-role="magic-overlay" data-target="#pictureBtn"
 						data-edit="insertImage" /> </a>
 				</div>
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="undo"
-						title="Undo (Ctrl/Cmd+Z)"><i class="icon-undo"></i>
-					</a> <a class="btn btn-default" data-edit="redo"
-						title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i>
+
+				<!-- Actions -->
+				<div>
+					<a data-edit="undo"
+						title="Undo (Ctrl/Cmd+Z)">Undo
+					</a> <a data-edit="redo"
+						title="Redo (Ctrl/Cmd+Y)">Redo
 					</a>
 				</div>
-				<input class="pull-right" type="text" data-edit="inserttext"
-					id="voiceBtn" x-webkit-speech="" />
-			</div>
 
-			<div id="editor" class="lead" placeholder="Go ahead&hellip;"></div>
+				<!-- Voice to Text -->
+				<input type="text" data-edit="inserttext"
+					id="voiceBtn" x-webkit-speech="" />
+			</div> <!-- / Toolbar -->
+
+			<!-- Editor -->
+			<div id="editor" placeholder="Go ahead&hellip;"></div>
 		</div>
 
+		<!-- Documentation -->
 		<div class="row">
 			<div class="span6">
 				<h2>About</h2>
