--- a/index.html
+++ b/index.html
@@ -243,14 +243,12 @@
 
 
 //      $('a[title]').tooltip({container:'body'});
-    	$('.dropdown-menu input').click(function() {return false;})
-		    .change(function () {$(this).parent('.dropdown-menu').siblings('.dropdown-toggle').dropdown('toggle');})
-        .keydown('esc', function () {this.value='';$(this).change();});
 
       $('[data-role=magic-overlay]').each(function () { 
         var overlay = $(this), target = $(overlay.data('target')); 
         overlay.css('opacity', 0).css('position', 'absolute').offset(target.offset()).width(target.outerWidth()).height(target.outerHeight());
       });
+
       if ("onwebkitspeechchange"  in document.createElement("input")) {
         var editorOffset = $('#editor').offset();
         //$('#voiceBtn').css('position','absolute').offset({top: editorOffset.top, left: editorOffset.left+$('#editor').innerWidth()-35});
@@ -258,20 +256,24 @@
         $('#voiceBtn').hide();
       }
 	};
+
 	function showErrorAlert (reason, detail) {
 		var msg='';
 		if (reason==='unsupported-file-type') { msg = "Unsupported format " +detail; }
 		else {
 			console.log("error uploading file", reason, detail);
 		}
-		$('<div class="alert"> <button type="button" class="close" data-dismiss="alert">&times;</button>'+ 
+		$('<div> <button type="button" data-dismiss="alert">&times;</button>'+
 		 '<strong>File upload error</strong> '+msg+' </div>').prependTo('#alerts');
 	};
+
     initToolbarBootstrapBindings();  
 	$('#editor').wysiwyg({ fileUploadError: showErrorAlert} );
-    window.prettyPrint && prettyPrint();
+//    window.prettyPrint && prettyPrint();
   });
 </script>
+
+
 	<a href="https://github.com/steveathon/bootstrap-wysiwyg/"><img
 		style="position: absolute; top: 0; right: 0; border: 0;"
 		src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
