--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		content="This tiny jQuery WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<!--<script src="external/jquery.hotkeys.js"></script>-->
 	<script src="bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
 	<script src="bower_components/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
 
