--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 		content="opensource rich wysiwyg text editor jquery execCommand html5" />
 	<meta name="description"
 		content="This tiny jQuery WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
-	<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<!--<script src="external/jquery.hotkeys.js"></script>-->
+
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
 	<script src="bower_components/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
-
-	<style>
-
-	</style>
 </head>
 <body>
 
